--- a/app/views/pages/_card.html.erb
+++ b/app/views/pages/_card.html.erb
@@ -1,7 +1,7 @@
 <div class="portfolio_card">
   <div>
-    <%= image_tag('staticpages.jpeg', width: '100%') %>
-  </div>
+    <%= image_tag("staticpages.jpg", width: '100%') %>
+ </div>
   <div class="portfolio_card_infos">
     <h4>Static-pages</h4>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
