--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,7 +5,8 @@
   <title>Document</title>
 </head>
 <body>
-    <%= render 'landing' %>
+
+    <%= render 'banner' %>
     <%= render 'nav' %>
     <%= render 'skills' %>
     <%= render 'portfolio' %>
