place background links in html page

--- a/app/views/pages/_footer.html.erb
+++ b/app/views/pages/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer id="footer">
+<footer id="footer" style="background-image: linear-gradient(rgba(49, 56, 62,0.55), rgba(49, 56, 62,0.95)), url(<%= image_path ('banner.jpg') %>)">
   <div class="container">
     <h1>Footer</h1>
   </div>
