--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -75,7 +75,6 @@ footer {
   }
 }
 #skills {
-  background: linear-gradient(rgba(33, 10, 172,0.25), rgba(33, 10, 172,0.85)), url($url);
 
   background-position: center center;
   background-attachment: fixed;
@@ -134,19 +133,16 @@ footer {
 
 
 #bio{
-  background-image: linear-gradient(rgba(144, 133, 214,0.55), rgba(144, 133, 214,0.95)),url('bannerH.jpg');
+  // background-image: linear-gradient(rgba(144, 133, 214,0.55), rgba(144, 133, 214,0.95)),url('bannerH.jpg');
 
   background-position: center center;
   background-attachment: fixed;
-    background-size: cover;
-
-
+  background-size: cover;
   background-color: $dominanteClaire;
   color: $white;
 }
 #contact{
 
-  // background-image: linear-gradient(rgba(216, 206, 177,0.55), rgba(216, 206, 177,0.95)),url('1607-06bleu.jpg');
   background-color: $complementaireClaire;
   background-position: center center;
   background-attachment: fixed;
@@ -156,9 +152,8 @@ footer {
   color: $white;
 }
 #footer{
-  background-image: linear-gradient(rgba(49, 56, 62,0.55), rgba(49, 56, 62,0.95)),url('bannerH.jpg');
-  // background-color: $noir;
-    background-position: center center;
+  // background-image: linear-gradient(rgba(49, 56, 62,0.55), rgba(49, 56, 62,0.95)),url('bannerH.jpg');
+  background-position: center center;
   background-attachment: fixed;
   background-size: cover;
   color: $white;
