refacto background image link

--- a/app/views/pages/_banner.html.erb
+++ b/app/views/pages/_banner.html.erb
@@ -1,7 +1,10 @@
-<section id="banner" style="background-image: url(<%= image_path('banner.jpg') %>">
+<section id="banner" style="background-image: linear-gradient(rgba(33, 10, 172,0.3), rgba(33, 10, 172,0.3)),url(<%= image_path('banner.jpg') %>)">
   <div class="container">
     <h1>Pierre Garcia</h1>
     <h1>Développeur Fullstack</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <p>Concepteur de métier, j'ai récemment professionnalisé mes compétences de Développeur au Wagon. Formé en Back et Front end, avec plusieurs années de pratique du code, je me propose
+    pour vous établir le cahier des charges et vous assister dans la création de votre site.</p>
+    <a class="btn btn-contact" href="mailto:pierrebgarciad@gmail.com?subject=Hello Pierre">Contact</a>
+
   </div>
 </section>
