--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -59,7 +59,6 @@ footer {
   color: $white;
 }
 
-
 #navigation {
   background-color: $dominante;
   font-family: "Roboto", "Futura", Arial, sans-serif;
@@ -74,8 +73,8 @@ footer {
     }
   }
 }
-#skills {
 
+#skills {
   background-position: center center;
   background-attachment: fixed;
   background-size: cover;
@@ -103,34 +102,32 @@ footer {
     justify-content: space-between;
     align-items: center;
 
-.portfolio_card {
-  background-color: white;
-  height: 250px;
-  width: 250px;
-  border-radius: 15px;
-  margin: 40px 0;
-  box-shadow: 0 0 6px gray;
-  img{
-    border-top-left-radius: 15px;
-    border-top-right-radius: 15px;
-  }
-  .portfolio_card_infos {
-    padding: 15px;
-    h4 {
-      font-size: 1em;
-      font-weight: bold;
-      color: $complementaire;
+    .portfolio_card {
+      background-color: white;
+      height: 250px;
+      width: 250px;
+      border-radius: 15px;
+      margin: 40px 0;
+      box-shadow: 0 0 6px gray;
+      img{
+        border-top-left-radius: 15px;
+        border-top-right-radius: 15px;
+      }
+      .portfolio_card_infos {
+        padding: 15px;
+        h4 {
+          font-size: 1em;
+          font-weight: bold;
+          color: $complementaire;
+        }
+        p {
+          font-size: 0.8em;
+          color: $noir;
+        }
+      }
     }
-    p {
-      font-size: 0.8em;
-      color: $noir;
-    }
-  }
-  }
   }
 }
-
-
 
 #bio{
   // background-image: linear-gradient(rgba(144, 133, 214,0.55), rgba(144, 133, 214,0.95)),url('bannerH.jpg');
@@ -141,6 +138,7 @@ footer {
   background-color: $dominanteClaire;
   color: $white;
 }
+
 #contact{
 
   background-color: $complementaireClaire;
@@ -151,6 +149,7 @@ footer {
   background-color: $complementaireClaire;
   color: $white;
 }
+
 #footer{
   // background-image: linear-gradient(rgba(49, 56, 62,0.55), rgba(49, 56, 62,0.95)),url('bannerH.jpg');
   background-position: center center;
@@ -159,3 +158,13 @@ footer {
   color: $white;
 }
 
+.btn-contact {
+  color: $gris;
+  background-color: $complementaire;
+  border: 1px solid $complementaire;
+  border-radius: 4px;
+  &:hover {
+    color: $white;
+
+  }
+}
