--- a/app/views/pages/_portfolio.html.erb
+++ b/app/views/pages/_portfolio.html.erb
@@ -1,11 +1,14 @@
 <section id="portfolio">
       <div class="container">
         <h1>Portfolio</h1>
+
           <div id="cards_section">
-            <%= render 'card' %>
-            <%= render 'card' %>
-            <%= render 'card' %>
-            <%= render 'card' %>
+            <% card = {link: "staticpages.jpg", title: 'Static-pages', content: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit.'}
+ %>
+            <%= render 'card',  %>
+            <%#= render 'card' %>
+            <%#= render 'card' %>
+            <%#= render 'card' %>
           </div>
       </div>
 </section>
