--- a/app/views/pages/_skills.html.erb
+++ b/app/views/pages/_skills.html.erb
@@ -5,30 +5,31 @@
           <table>
           <thead>
             <tr>
-              <td>HTML</td>
-              <td>Ruby On Rails</td>
-              <td>Photoshop</td>
+              <td><%= image_tag 'icons/rails.svg', width: 35 %>Ruby On Rails</td>
+              <td><%= image_tag 'icons/react.svg', width: 35 %>React</td>
+              <td><%= image_tag 'icons/photoshop.svg', width: 35 %>Photoshop</td>
             </tr>
             <tr>
-              <td>CSS</td>
-              <td>React</td>
-              <td>Illustrator</td>
+              <td><%= image_tag 'icons/HTML.svg', width: 30 %>HTML</td>
+              <td><%= image_tag 'icons/heroku.svg', width: 35 %>Heroku</td>
+              <td><%= image_tag 'icons/illustrator.svg', width: 35 %>Illustrator</td>
             <tr>
             <tr>
-              <td>Javascript ES6</td>
-              <td>PostgreSQL</td>
-              <td>InDesign</td>
+              <td><%= image_tag 'icons/CSS.svg', width: 30 %>CSS</td>
+              <td><%= image_tag 'icons/postgresql.svg', width: 45 %>PostgreSQL</td>
+              <td><%= image_tag 'icons/indesign.svg', width: 35 %>InDesign</td>
             </tr>
             <tr>
-              <td>Ruby</td>
-              <td>Git / Github</td>
+              <td><%= image_tag 'icons/JS.svg', width: 30 %>Javascript ES6</td>
+              <td><%= image_tag 'icons/git.svg', width: 35 %>Git</td>
             </tr>
             <tr>
-              <td>SQL</td>
-              <td>Heroku</td>
+              <td><%= image_tag 'icons/github.svg', width: 35 %>Github</td>
+              <td><%= image_tag 'icons/ruby.svg', width: 35 %>Ruby</td>
             </tr>
             <tr>
-              <td>Bootstrap</td>
+              <td><%= image_tag 'icons/SQL.svg', width: 35 %>SQL</td>
+
             </tr>
           </thead>
         </table>
