--- a/app/views/pages/_banner.html.erb
+++ b/app/views/pages/_banner.html.erb
@@ -1,10 +1,13 @@
 <section id="banner" style="background-image: linear-gradient(rgba(33, 10, 172,0.3), rgba(33, 10, 172,0.3)),url(<%= image_path('banner.jpg') %>)">
   <div class="container">
     <h1>Pierre Garcia</h1>
-    <h1>Développeur Fullstack</h1>
-    <p>Concepteur de métier, j'ai récemment professionnalisé mes compétences de Développeur au Wagon. Formé en Back et Front end, avec plusieurs années de pratique du code, je me propose
-    pour vous établir le cahier des charges et vous assister dans la création de votre site.</p>
-    <a class="btn btn-contact" href="mailto:pierrebgarciad@gmail.com?subject=Hello Pierre">Contact</a>
+    <h1 style="color: #a99c7f">Développeur Fullstack</h1>
+    <p>Riche d’un parcours dans les arts-appliqués, j’ai professionnalisé
+    mes compétences en développement web. Je souhaite mettre à profit de nombreuses
+  skills acquises dans la conception de produits et de solutions sur-mesure : adaptabilité
+à l’exigence client, gestion d’équipe hyper réactive, méthodes orientées résultat, autonomie et
+exigence qualitative, qui s’apparentent au mode de travail agile.</p>
+    <a class="button" href="mailto:pierrebgarciad@gmail.com?subject=Hello Pierre">Contact</a>
 
   </div>
 </section>
