--- a/app/views/pages/_footer.html.erb
+++ b/app/views/pages/_footer.html.erb
@@ -1,5 +1,36 @@
 <footer id="footer" style="background-image: linear-gradient(rgba(49, 56, 62,0.55), rgba(49, 56, 62,0.95)), url(<%= image_path ('banner.jpg') %>)">
   <div class="container">
-    <h1>Footer</h1>
+    <div class="row">
+
+      <div class="col-4">
+        <p>Paris</p>
+        <p>+33 616 727 481</p>
+        <p>pierrebgarciad@gmail.com</p>
+      </div>
+
+      <div class="col-4">
+        <div class="text-center">
+          <%= link_to "#" , width: 35 do %>
+          <%= image_tag 'iconsNew/github.svg', width: 35 %>
+          <% end %>
+          <%= link_to "#" , width: 35 do %>
+          <%= image_tag 'iconsNew/linkedin1.svg', width: 35 %>
+          <% end %>
+          <%= link_to "#" , width: 35 do %>
+          <%= image_tag 'iconsNew/instagram2.svg', width: 35 %>
+          <% end %>
+        </div>
+        <div class="text-center">
+          <p>© Pierre Garcia</p>
+          <p>Droits réservés 2020.</p>
+        </div>
+      </div>
+
+      <div class="col-4">
+        <p>Mentions légales</p>
+        <p>Plan du site</p>
+      </div>
+
+    </div>
   </div>
 </footer>
