--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -106,13 +106,15 @@ footer {
   background-position: center center;
   background-attachment: fixed;
   background-size: cover;
-
   color: $white;
+  table {
+    margin-top: 3.5em;
+  }
   td {
     width: 200px;
     height: 2em;
     img {
-      margin: 10px;
+      margin: 10px 10px 10px 0;
     }
   }
 }
@@ -231,8 +233,12 @@ footer {
   }
   margin-left: 3em;
   padding-top: 3em;
-  .icons img {
-    margin: 0 1em;
+  .icons {
+    display: block;
+    float: right;
+    img {
+      margin-right: 1.2em;
+    }
   }
 }
 
