fix details about personnal website

--- a/app/views/pages/_portfolio.html.erb
+++ b/app/views/pages/_portfolio.html.erb
@@ -111,13 +111,12 @@
             </div>
             <div class="col-9">
               <div class="content-card">
-                <h2>Site personnel</h2>
-                <p>Pour créer ce site personnel d'artiste, j'ai appris HTML, CSS et javascript en autodidacte. Ce site est depuis régulièrement mis à jour, et il a également été refondu plusieurs fois pour évoluer dans l'esthétique et la technologie selon l'air du temps.</p>
+                <h2>Site personnel professionnel</h2>
+                <p>J'ai créé ce site pour promouvoir mon profil professionnel. J'ai appris HTML, CSS et javascript en autodidacte. Je le mets régulièrement à jour, et tous les 2-3 ans je procède à une refonte de l'UI pour évoluer avec l'esthétique et la technologie de l'air du temps.</p>
                 <div class="icons">
                   <%= image_tag('iconsNew/HTML.svg', width: '50')  %>
                   <%= image_tag('iconsNew/CSS.svg', width: '50')  %>
-                  <%= image_tag('iconsNew/SQL.svg', width: '50')  %>
-                  <%= image_tag('iconsNew/php.svg', width: '50')  %>
+                  <%= image_tag('iconsNew/JS.svg', width: '50')  %>
                 </div>
               </div>
             </div>
