--- a/app/views/pages/_portfolio.html.erb
+++ b/app/views/pages/_portfolio.html.erb
@@ -8,7 +8,7 @@
           <div class="row">
             <div class="col-3">
               <%= link_to "https://www.guesswhat.live", target: 'blank' do %>
-                <div class="image-card" style="background-image: linear-gradient(rgba(10, 3, 130,0.2), rgba(10, 3, 130,0.5)), url(<%= image_path('guesswhat.jpg') %>)">
+                <div class="image-card" style="background-image: linear-gradient(rgba(10, 3, 130,0.2), rgba(10, 3, 130,0.5)), url(<%= image_path('thumbGuesswhat.jpg') %>)">
                 </div>
               <% end %>
             </div>
@@ -32,7 +32,7 @@
           <div class="row">
             <div class="col-3">
               <%= link_to "https://staticpages-pg.herokuapp.com/", target: 'blank' do %>
-                <div class="image-card" style="background-image: linear-gradient(rgba(10, 3, 130,0.2), rgba(10, 3, 130,0.5)), url(<%= image_path('staticpages.jpg') %>)">
+                <div class="image-card" style="background-image: linear-gradient(rgba(10, 3, 130,0.2), rgba(10, 3, 130,0.5)), url(<%= image_path('thumbStaticpages.jpg') %>)">
                 </div>
               <% end %>
             </div>
@@ -55,7 +55,7 @@
           <div class="row">
             <div class="col-3">
               <%= link_to "https://pet-me-please.herokuapp.com/", target: 'blank' do %>
-                <div class="image-card" style="background-image: linear-gradient(rgba(10, 3, 130,0.2), rgba(10, 3, 130,0.5)), url(<%= image_path('petme.jpg') %>)">
+                <div class="image-card" style="background-image: linear-gradient(rgba(10, 3, 130,0.2), rgba(10, 3, 130,0.5)), url(<%= image_path('thumbPetme.jpg') %>)">
                 </div>
               <% end %>
             </div>
@@ -78,7 +78,7 @@
           <div class="row">
             <div class="col-3">
               <%= link_to "https://www.capoeiraviola.com/", target: 'blank' do %>
-                <div class="image-card" style="background-image: linear-gradient(rgba(10, 3, 130,0.2), rgba(10, 3, 130,0.5)), url(<%= image_path('viola.jpg') %>)">
+                <div class="image-card" style="background-image: linear-gradient(rgba(10, 3, 130,0.2), rgba(10, 3, 130,0.5)), url(<%= image_path('thumbViola.jpg') %>)">
                 </div>
               <% end %>
             </div>
@@ -105,14 +105,14 @@
           <div class="row">
             <div class="col-3">
               <%= link_to "https://www.pierregarcia.fr/", target: 'blank' do %>
-                <div class="image-card" style="background-image: linear-gradient(rgba(10, 3, 130,0.2), rgba(10, 3, 130,0.5)), url(<%= image_path('siteperso.jpg') %>)">
+                <div class="image-card" style="background-image: linear-gradient(rgba(10, 3, 130,0.2), rgba(10, 3, 130,0.5)), url(<%= image_path('thumbSiteperso.jpg') %>)">
                 </div>
               <% end %>
             </div>
             <div class="col-9">
               <div class="content-card">
                 <h2>Site personnel professionnel</h2>
-                <p>J'ai créé ce site pour promouvoir mon profil professionnel. J'ai appris HTML, CSS et javascript en autodidacte. Je le mets régulièrement à jour, et tous les 2-3 ans je procède à une refonte de l'UI pour évoluer avec l'esthétique et la technologie de l'air du temps.</p>
+                <p>J'ai créé ce site il y a 10 ans pour promouvoir mon profil professionnel. J'ai appris HTML, CSS et javascript en autodidacte. Je le mets régulièrement à jour, et tous les 2-3 ans je procède à une refonte de l'UI pour évoluer avec l'esthétique et la technologie de l'air du temps.</p>
                 <div class="icons">
                   <%= image_tag('iconsNew/HTML.svg', width: '50')  %>
                   <%= image_tag('iconsNew/CSS.svg', width: '50')  %>
