--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,7 +11,7 @@
     <%= render 'skills' %>
     <%= render 'portfolio' %>
     <%= render 'bio' %>
-    <%= render 'contact' %>
+    <%#= render 'contact' %>
     <%= render 'footer' %>
 
 </body>
