--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -246,17 +246,76 @@ footer {
     padding: 0;
   }
 }
-.biocard {
-  width: 100%;
-  // border: 2px solid yellow;
+
+
+.front {
   border-radius: 20px;
-  // background-position: center center;
-  // background-attachment: fixed;
-  background-size: cover;
 }
-.biocard:after {
-  content: '';
+
+.middle {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  padding: 8%;
+}
+
+.bio-card {
+  cursor: pointer;
+  width: 100%;
+  position: relative;
+}
+.bio-card:after {
+  content: "";
   display: block;
   padding-bottom: 100%;
+}
+.front, .back {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  backface-visibility: hidden;
+  position: absolute;
+  transition: transform .6s linear;
+}
+.front {
+  transform: perspective(600px) rotateY(0deg);
+  background-size: cover;
+}
+.back {
+  //background-color: rgba(255,255,255,0.2);
+  transform: perspective(600px) rotateY(180deg);
+  border-radius: 20px;
+}
+.back-content {
+  text-align: center;
+  width: 100%;
+  h2 {
+    color: $dominante;
+    font-weight: bold;
+  }
+  span {
+    color: $noir;
+  }
+
+}
+.sm a {
+  display: inline-flex;
+  width: 40px;
+  height: 40px;
+  justify-content: center;
+  align-items: center;
+  transition: 0.4s;
+}
+.sm a:hover {
+  background: yellow;
+  color: white;
+  border-radius: 50%;
+}
+.bio-card:hover > .front {
+  transform: perspective(600px) rotateY(-180deg);
+}
+.bio-card:hover > .back {
+  transform: perspective(600px) rotateY(0deg);
 }
 
