--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -242,14 +242,38 @@ footer {
   }
 }
 #bio {
+  p {
+    padding: 3em 0;
+  }
   .col-4 {
     padding: 0;
   }
 }
 
-
-.front {
-  border-radius: 20px;
+.bio-card {
+  cursor: pointer;
+  width: 100%;
+  position: relative;
+  .front {
+    border-radius: 20px;
+  }
+  .front, .back {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    backface-visibility: hidden;
+    position: absolute;
+    transition: transform .6s linear;
+  }
+  .front {
+    transform: perspective(600px) rotateY(0deg);
+    background-size: cover;
+  }
+  .back {
+    background-color: rgba(255, 255, 255, 0.35);
+    transform: perspective(600px) rotateY(180deg);
+    border-radius: 20px;
+  }
 }
 
 .middle {
@@ -258,34 +282,13 @@ footer {
   left: 50%;
   transform: translate(-50%,-50%);
   padding: 8%;
+  background: none;
 }
 
-.bio-card {
-  cursor: pointer;
-  width: 100%;
-  position: relative;
-}
 .bio-card:after {
   content: "";
   display: block;
   padding-bottom: 100%;
-}
-.front, .back {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  backface-visibility: hidden;
-  position: absolute;
-  transition: transform .6s linear;
-}
-.front {
-  transform: perspective(600px) rotateY(0deg);
-  background-size: cover;
-}
-.back {
-  //background-color: rgba(255,255,255,0.2);
-  transform: perspective(600px) rotateY(180deg);
-  border-radius: 20px;
 }
 .back-content {
   text-align: center;
@@ -297,20 +300,20 @@ footer {
   span {
     color: $noir;
   }
+  .sm a {
+    display: inline-flex;
+    width: 40px;
+    height: 40px;
+    justify-content: center;
+    align-items: center;
+    transition: 0.4s;
+  }
+  .sm a:hover {
+    background: yellow;
+    color: white;
+    border-radius: 50%;
+  }
 
-}
-.sm a {
-  display: inline-flex;
-  width: 40px;
-  height: 40px;
-  justify-content: center;
-  align-items: center;
-  transition: 0.4s;
-}
-.sm a:hover {
-  background: yellow;
-  color: white;
-  border-radius: 50%;
 }
 .bio-card:hover > .front {
   transform: perspective(600px) rotateY(-180deg);
